--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.7.0"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "/.fttemplates/"
+    ]
   }
 }
